Switch to use TwelveMonkeys ImageIO
- Refactoring + polishing
- Update README.adoc
- Make improvement to the GraalVM native compilation process